cmake_minimum_required(VERSION 3.22)
project(Xcamp300)

set(CMAKE_CXX_STANDARD 23)

add_executable(Xcamp300 "Breed Counting.cpp" "Subsequences Summing to Sevens.cpp" "Subarray Sums I.cpp" "Restaurant Customers.cpp" "Hoof, Paper, Scissors.cpp" "Subarray Sums II.cpp" "Forest Queries .cpp" "Sum of Two Values.cpp" "Sum of three values.cpp" "Remove duplication and sort.cpp" "Maximum Subarray Sum I.cpp" "Haybale Stacking.cpp" "Diamond Collector.cpp")
